# husky_mixed_reality_ws

./: LICENSE  README.md  gps_data_t12_3.15.2022.txt  gps_data_t13_3.15.2022.txt  gps_data_t1_3.15.2022.txt  gps_data_t4_3.15.2022.txt
src/algorithm_1/: CMakeLists.txt  package.xml
src/algorithm_1/launch/: algorithm_1.launch
src/algorithm_1/src/: real_algorithm_1.cpp  sim_algorithm_1.cpp  test_include_library.cpp
src/algorithm_2/: CMakeLists.txt  package.xml
src/algorithm_2/launch/: algorithm_2.launch
src/algorithm_2/src/: sim_algorithm_2.cpp  sim_gps_processor.cpp
src/algorithm_3/: CMakeLists.txt  package.xml
src/algorithm_3/launch/: algorithm_3.launch
src/algorithm_3/src/: a_star.cpp  cross_track_error.txt  cross_track_errorLD2.txt  cross_track_errorLD3.txt  data_harvester.cpp  expt_astar.cpp  mr_algorithm_3.cpp  real_algorithm_3.cpp  sim_algorithm_3.cpp  testr.cpp  testr2.cpp  testr3.cpp  testr4.cpp
src/husky_vicon_link/: CMakeLists.txt  README.md  package.xml
src/husky_vicon_link/include/husky_vicon_link/: husky_vicon_link.h
src/husky_vicon_link/src/: husky_vicon_link.cpp
src/mixed_reality_library/: CMakeLists.txt  package.xml
src/mixed_reality_library/include/mixed_reality_library/: mixed_reality_library.h
src/mixed_reality_library/src/: mixed_reality_library.cpp
src/robot_keyboard_control/: CMakeLists.txt  package.xml
src/robot_keyboard_control/launch/: robot_keyboard_control.launch
src/robot_keyboard_control/src/: robot_keyboard_control.cpp
src/simulated_gps/: CMakeLists.txt  README  package.xml
src/simulated_gps/src/: combined_new_simulated_gps.cpp  copy_new_simulated_gps.cpp  gps_message_combiner.py  more_gps_data.py  new_simulated_gps.cpp  sim_gps_processor.cpp  simulated_gps.cpp  testr.cpp
src/test/: package.xml
